<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_meeting_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
...
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/create_meeting_validate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/collapsing_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_meeting_topic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/cardview_default_margin"
                        android:layout_marginTop="@dimen/cardview_default_margin"
                        android:layout_marginEnd="@dimen/cardview_default_margin"
                        android:hint="@string/add_meeting_topic"
...
                        android:id="@+id/info_text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_default"
                        android:text="@string/add_meeting_date"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintBottom_toTopOf="@+id/date_picker_actions"
                        app:layout_constraintEnd_toEndOf="@+id/date_picker_actions"
                        app:layout_constraintStart_toStartOf="@+id/date_picker_actions" />

                    <Button
                        android:id="@+id/date_picker_actions"
                        android:layout_width="@dimen/button_default_width"
...
                        android:layout_marginBottom="32dp"
                        android:text="@string/add_meeting_date_picker"
                        android:textColorHint="@color/primaryTextColor"
                        android:textSize="@dimen/text_size_normal"
                        app:cornerRadius="@dimen/button_default_radius"
                        app:layout_constraintBottom_toTopOf="@+id/info_text_room"
                        app:layout_constraintEnd_toStartOf="@+id/time_picker_action"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_input_meeting_topic" />

                    <TextView
                        android:id="@+id/info_text_time"
...
                        android:id="@+id/info_text_room"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_default"
                        android:text="@string/add_meeting_room"
                        android:textSize="@dimen/text_size_normal"
                        app:layout_constraintBottom_toTopOf="@+id/spinner_room_action"
                        app:layout_constraintEnd_toEndOf="@+id/spinner_room_action"
                        app:layout_constraintStart_toStartOf="@+id/spinner_room_action" />

                    <Spinner
                        android:id="@+id/spinner_room_action"
                        android:layout_width="@dimen/button_default_width"
                        android:layout_height="45dp"
                        android:layout_marginStart="@dimen/cardview_default_margin"
                        android:layout_marginBottom="32dp"
                        app:layout_constraintEnd_toStartOf="@+id/spinner_meeting_duration"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spinner_meeting_duration" />

                    <TextView
                        android:id="@+id/info_text_duration"
                        android:layout_width="wrap_content"
...
                        app:layout_constraintBottom_toBottomOf="@+id/spinner_room_action"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/spinner_room_action"
                        app:layout_constraintTop_toTopOf="@+id/spinner_room_action" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="@dimen/cardview_default_margin"
                        android:layout_marginTop="@dimen/cardview_default_margin"
                        android:layout_marginEnd="@dimen/cardview_default_margin"
                        android:hint="@string/add_meeting_email"
...
