<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/cardview_default_margin"
    tools:context=".ui_meeting_list.ListMeetingActivity">

    <TextView
        android:id="@+id/detail_meeting_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/meeting_topic"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_meeting_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/time_spinner_duration"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_meeting_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/detail_meeting_room" />

    <TextView
        android:id="@+id/detail_meeting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date_item"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_meeting_room"
        app:layout_constraintEnd_toStartOf="@+id/detail_meeting_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_meeting_topic" />

    <TextView
        android:id="@+id/detail_meeting_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/spinner_meeting_room"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_list_title"
        app:layout_constraintEnd_toStartOf="@+id/detail_meeting_duration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_meeting_date" />

    <TextView
        android:id="@+id/detail_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/guest_list"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/detail_guests_email_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_meeting_room" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_guests_email_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:chipSpacingVertical="2dp"
        app:layout_constraintBottom_toTopOf="@+id/detail_action_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_list_title" />

    <TextView
        android:id="@+id/detail_meeting_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hour_item"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_meeting_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/detail_meeting_date" />

    <TextView
        android:id="@+id/detail_action_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="OK"
        android:textColor="@color/lamzone_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_guests_email_recyclerview" />

</androidx.constraintlayout.widget.ConstraintLayout>